alignment fix

--- a/src/css/ProductRight.scss
+++ b/src/css/ProductRight.scss
@@ -40,7 +40,9 @@
   border-bottom: 1px solid #000;
   border-top: 1px solid #000;
   div {
-    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-justify: inter-word;
   }
   .para_1 {
@@ -50,6 +52,7 @@
     word-spacing: 12px;
     letter-spacing: 0.063rem;
     font-size: 18px;
+    margin-left: 20px !important;
     @media screen and (max-width: 1024px) {
       font-size: 14px !important;
     }
@@ -61,6 +64,7 @@
     letter-spacing: 0.063rem;
     word-spacing: 12px;
     font-size: 18px;
+    margin-left: 20px !important;
     @media screen and (max-width: 1024px) {
       font-size: 14px !important;
     }
@@ -126,21 +130,27 @@
   }
   .paraPoint.para1 {
     word-spacing: 23px;
+    margin-left: 20px !important;
   }
   .paraPoint.para2.eastern {
     word-spacing: 25px;
+    margin-left: 20px !important;
   }
   .paraPoint.para2 {
     word-spacing: 21px;
+    margin-left: 20px !important;
   }
   .paraPoint.para3 {
     word-spacing: 21px;
+    margin-left: 20px !important;
   }
   .paraPoint.para4 {
-    word-spacing: 21px;
+    word-spacing: 21.5px;
+    margin-left: 20px !important;
   }
   .paraPoint.para5 {
-    word-spacing: 21px;
+    word-spacing: 22px;
+    margin-left: 20px !important;
   }
 
   @media screen and (max-width: 400px) {
@@ -389,11 +399,11 @@
   .second_section {
     .para_1 {
       letter-spacing: 0.063rem;
-      word-spacing: 15px;
+      word-spacing: 16.5px;
     }
     .para_2 {
       letter-spacing: 0.063rem;
-      word-spacing: 14px;
+      word-spacing: 15px;
     }
   }
 }
